<resources>
    <string name="app_name">MadLevel4Task2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome_txt">Welcome</string>
    <string name="instuction_txt">Instuctions: select rock, paper or scissors to play.</string>
    <string name="computer">Computer</string>
    <string name="player">Player</string>
    <string name="vs">VS</string>
    <string name="game_statsssss" />
    <string name="game_stats">Your all time scores:</string>
    <string name="stats_first_page">Win: %s Draw: %s Lost: %s</string>
</resources>